--- a/projekt/projekt/Views/Meals/Create.cshtml
+++ b/projekt/projekt/Views/Meals/Create.cshtml
@@ -1,22 +1,205 @@
 ﻿@model projekt.ViewModels.DanieViewModel
 
-<h2>Utwórz danie</h2>
 
-@using (Html.BeginForm())
-{
-    <div class="form-group">
-        @Html.LabelFor(model => model.NazwaDania)
-        @Html.TextBoxFor(model => model.NazwaDania, new { @class = "form-control" })
-        @Html.ValidationMessageFor(model => model.NazwaDania)
-    </div>
+@{
+    ViewData["Title"] = "Create";
+}
+<style>
+    .wlasciwosclisty {
+        width: 8%
+    }
+</style>
 
-    <h3>Produkty:</h3>
-    @Html.DropDownListFor(model => model.Produkty, new SelectList(Model.Produkty, "Id", "Nazwa"))
-        
+	<div class="card">
+		<div class="card-header bg-success text-uppercase text-white text-center mb-2 pt-0" style="height:25px;">
+        <h6>Utwórz danie</h6>
+		</div>	
+
+  <form id="CodeSbyAnizForm" asp-action="Create">
+
+  
+           <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            
+                <label asp-for="NazwaDania" class="control-label"></label>            
+           
+                <input asp-for="NazwaDania" class="form-control" />
+                @*<span asp-validation-for="PoNumber" class="text-danger"></span> *@
+           
+            
+          
+
+            		<div class="col-12 ml-5">
+					<table id="CodesTable" class="table table-borderless table-sm mb-0 pb-0">
+						<thead>
+							<tr>
+								<th>
+									Nazwa
+								</th>
+                                <th>
+                                   Ilość
+                                </th>
+								<th>
+									Kalorycznosc
+								</th>
+                                <th>
+								    Białko
+								</th>
+                                <th>
+								    Tłuszcz 
+								</th>
+                                <th>
+                                    Węglowodany
+                                </th>
+                                <th>
+									Błonnik
+								</th>							
+                                  <th style="width:60px;">
+                                        <button id='btnAddDetailRow' type="button" class="btn btn-sm btn-secondary visible" onclick="AddItem(this)">
+                                            Add
+                                        </button>
+                                   </th>
+							</tr>
+						</thead>
+
+                    <tbody>                                
+                        @for (int i = 0; i < Model.Produkty.Count(); i++)
+                        {
+                            <tr>
+                                <td style="width:30%;">
+								    @*<input asp-for="@Model.PoDetails[i].ProductCode" class="form-control" />*@
+                                    <select asp-for="@Model.Produkty[i].Nazwa" class="form-control" asp-items="ViewBag.ProduktyLista"></select>
+                                </td>
+                                    <td class="wlasciwosclisty">
+                                        <input asp-for="@Model.Ilosc" class="form-control" />
+                                        <span asp-validation-for="@Model.Ilosc" class="text-danger"></span>
+									</td>
+                                    <td class ="wlasciwosclisty">
+										<input asp-for="@Model.Produkty[i].Kaloryczność * Model.Ilosc" class="form-control"   readonly/>
+										
+									</td>
+                                    <td class ="wlasciwosclisty">
+                                                @*<input asp-for="@Model.PoDetails[i].PrcInBaseCur" class="form-control" />
+                                            <span asp-validation-for="@Model.PoDetails[i].PrcInBaseCur" class="text-danger"></span>*@
+                                            </td >
+                                    <td class="wlasciwosclisty">
+										@*<input asp-for="@Model.PoDetails[i].PrcInBaseCur" class="form-control" />
+										<span asp-validation-for="@Model.PoDetails[i].PrcInBaseCur" class="text-danger"></span>*@
+									</td class ="wlasciwosclisty">
+                                    <td class ="wlasciwosclisty">
+                                        @*<input asp-for="@Model.PoDetails[i].PrcInBaseCur" class="form-control" />
+                                    <span asp-validation-for="@Model.PoDetails[i].PrcInBaseCur" class="text-danger"></span>*@
+                                    </td class ="wlasciwosclisty">
+                                    <td class ="wlasciwosclisty">
+										@*<input asp-for="@Model.PoDetails[i].UnitName" class="form-control" readonly />*@	
+                                        <input type="hidden" asp-for="@Model.Produkty[i].IsDeleted" />	
+									</td class ="wlasciwosclisty">
+                                    <td style="width:60px;">
+                                         <button id='btnremove-@i' type="button" class="btn btn-sm btn-danger visible" onclick="DeleteItem(this)">
+                                             Delete
+                                        </button>
+                                        </td>
+                                    </tr>                                
+                        }
+                    </tbody>
+
+					</table>                      
+                    
+
+				</div>
+
+
+
+
+       
+         <div class="form-group btn-group col-12">
+                <div class="col-1"></div>
+                <div class="col-5">
+                    <input type="submit" value="Create" class="btn btn-primary btn-block" />
+                </div>           
+                <div class="col-5">
+                    <a class="btn btn-secondary btn-block" asp-action="MyMeals"
+                       asp-route-pg="@TempData.Peek("CurrentPage")">Back</a>
+                </div>     
+                <div class="col-1"></div>
+         </div>
+
+
+
+</form>
+
+</div>
+@section Scripts {
+   <script>
+        function DeleteItem(btn) {
+
+	   var table = document.getElementById('CodesTable');
+	   var rows = table.getElementsByTagName('tr');	           
+            
+	        var btnIdx = btn.id.replaceAll('btnremove-', '');
+            var idOfQuantity = btnIdx + "__Quantity";
+            var txtQuantity = document.querySelector("[id$='" + idOfQuantity + "']");
+
+            txtQuantity.value = 0;
+                        
+
+            var idOfIsDeleted = btnIdx + "__IsDeleted";
+            var txtIsDeleted = document.querySelector("[id$='" + idOfIsDeleted + "']");            
+            txtIsDeleted.value="true";
+                       
+            $(btn).closest('tr').hide();
+
+            CalcTotals();
+
+}
+    function AddItem(btn) {
+
+        var table;
+        table = document.getElementById('CodesTable');
+        var rows = table.getElementsByTagName('tr');
+        var rowOuterHtml = rows[rows.length - 1].outerHTML;
+
+        var lastrowIdx = rows.length - 2;
+
+        var nextrowIdx = eval(lastrowIdx) + 1;
+
+        rowOuterHtml = rowOuterHtml.replaceAll('_' + lastrowIdx + '_', '_' + nextrowIdx + '_');
+        rowOuterHtml = rowOuterHtml.replaceAll('[' + lastrowIdx + ']', '[' + nextrowIdx + ']');
+        rowOuterHtml = rowOuterHtml.replaceAll('-' + lastrowIdx, '-' + nextrowIdx);
+
+        var newRow = table.insertRow();
+        newRow.innerHTML = rowOuterHtml;
+
+        var x = document.getElementsByTagName("INPUT");
+
+        for (var cnt = 0; cnt < x.length; cnt++) {
+            if (x[cnt].type == "text" && x[cnt].id.indexOf('_' + nextrowIdx + '_') > 0) {
+                if (x[cnt].id.indexOf('Unit') == 0)
+                    x[cnt].value = '';
+            }
+            else if (x[cnt].type == "number" && x[cnt].id.indexOf('_' + nextrowIdx + '_') > 0)
+                x[cnt].value = 0;
+        }
+
+        rebindvalidators();
+    }
+
+function rebindvalidators() {
+
+
+    var $form = $("#CodeSbyAnizForm");
+
+    $form.unbind();
+
+    $form.data("validator", null);
+
+    $.validator.unobtrusive.parse($form);
+
+    $form.validate($form.data("unobtrusiveValidation").options);
+
+}
+
+
+        </script>
     
-
-        
-   <br/>
-
-    <input type="submit" value="Utwórz" class="btn btn-primary" />
 }
