--- a/projekt/projekt/Views/Home/Privacy.cshtml
+++ b/projekt/projekt/Views/Home/Privacy.cshtml
@@ -1,13 +1,10 @@
-﻿@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
-
+﻿<div style="text-align:center">
+<h1>Twórcy</h1>
 <p>Strona stwożona jako projekt na "programowanie obiektowe i graficzne" oraz "bazy danych" przez
-    <ul>
-        <li>Paweł Cykowski</li>
-        <li>Wojciech Dziurosz</li>
-        <li>Bartosz Skura</li>
-        <li>Paweł Wójcik</li>
-    </ul>
+        <p>Paweł Cykowski</p>
+        <p>Wojciech Dziurosz</p>
+        <p>Bartosz Skura</p>
+        <p>Paweł Wójcik</p>
+
 </p>
+</div>
