--- a/projekt/projekt/Views/Shared/_Layout.cshtml
+++ b/projekt/projekt/Views/Shared/_Layout.cshtml
@@ -75,7 +75,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container-main">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -150,7 +150,7 @@
     </script>
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - projekt - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - projekt - <a asp-area="" asp-controller="Home" asp-action="Privacy">Informacje</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
