--- a/projekt/projekt/wwwroot/css/site.css
+++ b/projekt/projekt/wwwroot/css/site.css
@@ -10,21 +10,28 @@ html {
 
 }
 
-
 html {
     position: relative;
     min-height: 100%;
 }
-
 body {
-    margin-bottom: 60px;
+    margin-bottom: 2em!important;
+    background-color: #e6ffe6!important;
+}
+footer {
+    display:block;
+    position:absolute;
+    bottom: 0px!important;
+    background:inherit;
+    padding:0.5em 0px 0.5em 0px!important;
+    width: 100%;
 }
 
 .list {
     display: none;
     position: absolute;
     padding: 5px;
-    z-index: 2;
+    z-index: 5;
     width: fit-content;
     background-color: #17a2b8;
 }
@@ -43,7 +50,29 @@ ul {
     color: rgba(255,255,255,.87) !important;
     background-color: #343a40 !important;
 }
+    .dark-mode .pagination .page-link{
+        background: #343a40;
+        color:white
+    }
+.pagination .page-link {
+    background-color: #e6ffe6 ;
+    color: #0353a8;
+}
+.pagination .page-item.active .page-link {
+    background-color: #ccffcc ;
+    color: #00f;
+}
+.dark-mode .pagination .page-item.active .page-link {
+    background-color: #3c4349;
+    color: white;
+}
+.dark-mode .table {
+    color:#b8cee4;
+}
 
+.pagination{
+    margin: 1em;
+}
 
 #dark-toggle {
     align-self: flex-end;
