--- a/projekt/projekt/Views/Meals/Create.cshtml
+++ b/projekt/projekt/Views/Meals/Create.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewData["Title"] = "Create";
+    
 }
 <style>
     .wlasciwosclisty {
@@ -14,7 +15,8 @@
 		<div class="card-header bg-success text-uppercase text-white text-center mb-2 pt-0" style="height:25px;">
         <h6>Utwórz danie</h6>
 		</div>	
-
+        
+        
   <form id="CodeSbyAnizForm" asp-action="Create">
 
   
@@ -30,17 +32,17 @@
           
 
             		<div class="col-12 ml-5">
-					<table id="CodesTable" class="table table-borderless table-sm mb-0 pb-0">
+					<table id="TabelaGlowna" class="table table-borderless table-sm mb-0 pb-0">
 						<thead>
 							<tr>
 								<th>
 									Nazwa
 								</th>
                                 <th>
-                                   Ilość
+                                   Ilość[g/ml]
                                 </th>
 								<th>
-									Kalorycznosc
+									Kaloryczność
 								</th>
                                 <th>
 								    Białko
@@ -68,34 +70,33 @@
                             <tr>
                                 <td style="width:30%;">
 								    @*<input asp-for="@Model.PoDetails[i].ProductCode" class="form-control" />*@
-                                    <select asp-for="@Model.Produkty[i].Nazwa" class="form-control" asp-items="ViewBag.ProduktyLista"></select>
+                                    <select asp-for="@Model.Produkty[i].Nazwa" class="form-control" asp-items="ViewBag.ProduktyLista" onchange="FillValues(this);"></select>
                                 </td>
                                     <td class="wlasciwosclisty">
-                                        <input asp-for="@Model.Ilosc" class="form-control" />
-                                        <span asp-validation-for="@Model.Ilosc" class="text-danger"></span>
+                                        <input asp-for="@Model.Ilosc[i]" class="form-control ilosc_class do_zmiany" />
+                                        <span asp-validation-for="@Model.Ilosc[i]" class="text-danger"></span>
 									</td>
                                     <td class ="wlasciwosclisty">
-										<input asp-for="@Model.Produkty[i].Kaloryczność * Model.Ilosc" class="form-control"   readonly/>
+										<input asp-for="@Model.Produkty[i].Kaloryczność" class="form-control" readonly/>
 										
 									</td>
                                     <td class ="wlasciwosclisty">
-                                                @*<input asp-for="@Model.PoDetails[i].PrcInBaseCur" class="form-control" />
-                                            <span asp-validation-for="@Model.PoDetails[i].PrcInBaseCur" class="text-danger"></span>*@
-                                            </td >
+                                             <input asp-for="@Model.Produkty[i].Białko" class="form-control" readonly/>
+                                            
+                                     </td >
                                     <td class="wlasciwosclisty">
-										@*<input asp-for="@Model.PoDetails[i].PrcInBaseCur" class="form-control" />
-										<span asp-validation-for="@Model.PoDetails[i].PrcInBaseCur" class="text-danger"></span>*@
+										<input asp-for="@Model.Produkty[i].Tłuszcz" class="form-control" readonly/>
+										
 									</td class ="wlasciwosclisty">
                                     <td class ="wlasciwosclisty">
-                                        @*<input asp-for="@Model.PoDetails[i].PrcInBaseCur" class="form-control" />
-                                    <span asp-validation-for="@Model.PoDetails[i].PrcInBaseCur" class="text-danger"></span>*@
+                                        <input asp-for="@Model.Produkty[i].Węglowodany" class="form-control" readonly/>
                                     </td class ="wlasciwosclisty">
                                     <td class ="wlasciwosclisty">
-										@*<input asp-for="@Model.PoDetails[i].UnitName" class="form-control" readonly />*@	
+										<input asp-for="@Model.Produkty[i].Błonnik" class="form-control" readonly/>	
                                         <input type="hidden" asp-for="@Model.Produkty[i].IsDeleted" />	
 									</td class ="wlasciwosclisty">
                                     <td style="width:60px;">
-                                         <button id='btnremove-@i' type="button" class="btn btn-sm btn-danger visible" onclick="DeleteItem(this)">
+                                         <button id='btnremove-@i' type="button" class="btn btn-sm btn-danger visible" onclick="CalcTotals()">
                                              Delete
                                         </button>
                                         </td>
@@ -103,7 +104,51 @@
                         }
                     </tbody>
 
-					</table>                      
+					</table>     
+                    <div>
+                         <div class="form-group col-12">            
+  </div>
+
+  <div class="form-group col-12">            
+  </div>
+                    </div>
+                     <table class="table table-sm mb-0 pb-0 border">
+                         <thead>
+                            <tr>
+                                 <th style="width:30%;">
+                                 Suma
+                                 </th>	
+                             
+                                 <th class ="wlasciwosclisty">		
+                                     <input type="text" id="ilosc_total" class="form-control form-control-plaintext" value="" />
+                                 </th>
+                                
+                                 <th class ="wlasciwosclisty">									
+                                    <input type="text" id="kalorycznosc_total" class="form-control form-control-plaintext" value="" />
+                                 </th>
+                                    
+                                 <th class ="wlasciwosclisty">		
+                                     <input type="text" id="bialko_total" class="form-control form-control-plaintext" value="" />
+                                 </th>
+
+                                 <th style="width:13%;">	
+                                     <input type="text" id="" class="form-control form-control-plaintext" value="" />
+                                 </th>                  
+                                
+                                 <th style="width:13%;">	
+                                     <input type="text" id="" class="form-control form-control-plaintext" value="" />
+                                 </th>					
+
+                                 <th style="width:13%;">									
+                                    <input type="text" id="txtAmountTotal" class="form-control form-control-plaintext" value="" />
+                                 </th>					
+                                
+                                 <th style="width:9%;">                                      
+                                 </th>
+                            </tr>
+ 
+                            </thead>
+                        </table>
                     
 
 				</div>
@@ -131,19 +176,43 @@
 </div>
 @section Scripts {
    <script>
+
+       var myArray = JSON.parse('@Json.Serialize(ViewBag.ProduktyLista)');
+       var kalorycznoscArray = JSON.parse('@Json.Serialize(ViewBag.Kalorycznosc)');
+       
+        
+       
+
+        
+      function FillValues(item){   
+          
+          console.log(item)
+
+          var kalorycznosc = kalorycznoscArray.find(function(element) {
+        return element.id==item.value;
+        });
+        console.log(kalorycznosc.kaloryczność)
+
+        document.getElementById('Produkty_0__T_uszcz').value=kalorycznosc.kaloryczność;
+
+        
+        
+            
+      }
+
         function DeleteItem(btn) {
 
-	   var table = document.getElementById('CodesTable');
+	   var table = document.getElementById('TabelaGlowna');
 	   var rows = table.getElementsByTagName('tr');	           
             
 	        var btnIdx = btn.id.replaceAll('btnremove-', '');
-            var idOfQuantity = btnIdx + "__Quantity";
+            var idOfQuantity = btnIdx + "AAQuantity";
             var txtQuantity = document.querySelector("[id$='" + idOfQuantity + "']");
 
             txtQuantity.value = 0;
                         
 
-            var idOfIsDeleted = btnIdx + "__IsDeleted";
+            var idOfIsDeleted = btnIdx + "AAIsDeleted";
             var txtIsDeleted = document.querySelector("[id$='" + idOfIsDeleted + "']");            
             txtIsDeleted.value="true";
                        
@@ -151,53 +220,116 @@
 
             CalcTotals();
 
+
 }
-    function AddItem(btn) {
+        function AddItem(btn) {
+            console.log("Create")
+            var table;
+            table = document.getElementById('TabelaGlowna');
+            var rows = table.getElementsByTagName('tr');
+            var rowOuterHtml = rows[rows.length - 1].outerHTML;
 
-        var table;
-        table = document.getElementById('CodesTable');
-        var rows = table.getElementsByTagName('tr');
-        var rowOuterHtml = rows[rows.length - 1].outerHTML;
+            var lastrowIdx = rows.length - 2;
 
-        var lastrowIdx = rows.length - 2;
+            var nextrowIdx = eval(lastrowIdx) + 1;
 
-        var nextrowIdx = eval(lastrowIdx) + 1;
+            rowOuterHtml = rowOuterHtml.replaceAll('_' + lastrowIdx + '_', '_' + nextrowIdx + '_');
+            rowOuterHtml = rowOuterHtml.replaceAll('[' + lastrowIdx + ']', '[' + nextrowIdx + ']');
+            rowOuterHtml = rowOuterHtml.replaceAll('-' + lastrowIdx, '-' + nextrowIdx);
 
-        rowOuterHtml = rowOuterHtml.replaceAll('_' + lastrowIdx + '_', '_' + nextrowIdx + '_');
-        rowOuterHtml = rowOuterHtml.replaceAll('[' + lastrowIdx + ']', '[' + nextrowIdx + ']');
-        rowOuterHtml = rowOuterHtml.replaceAll('-' + lastrowIdx, '-' + nextrowIdx);
+            var newRow = table.insertRow();
+            newRow.innerHTML = rowOuterHtml;
 
-        var newRow = table.insertRow();
-        newRow.innerHTML = rowOuterHtml;
+            var x = document.getElementsByTagName("INPUT");
 
-        var x = document.getElementsByTagName("INPUT");
-
-        for (var cnt = 0; cnt < x.length; cnt++) {
-            if (x[cnt].type == "text" && x[cnt].id.indexOf('_' + nextrowIdx + '_') > 0) {
-                if (x[cnt].id.indexOf('Unit') == 0)
-                    x[cnt].value = '';
+            for (var cnt = 0; cnt < x.length; cnt++) {
+                if (x[cnt].type == "text" && x[cnt].id.indexOf('_' + nextrowIdx + '_') > 0) {
+                    if (x[cnt].id.indexOf('Unit') == 0)
+                        x[cnt].value = '';
+                }
+                else if (x[cnt].type == "number" && x[cnt].id.indexOf('_' + nextrowIdx + '_') > 0)
+                    x[cnt].value = 0;
             }
-            else if (x[cnt].type == "number" && x[cnt].id.indexOf('_' + nextrowIdx + '_') > 0)
-                x[cnt].value = 0;
+
+            
         }
 
-        rebindvalidators();
-    }
-
-function rebindvalidators() {
 
 
-    var $form = $("#CodeSbyAnizForm");
+           function CalcTotals() {
 
-    $form.unbind();
+            var x = document.getElementsByClassName('ilosc_class');
+            //var x = document.getElementsByClassName('QtyTotal');
+            //console.log(x)
+            var ilosc_total= 0;
+            var ilosc_kalorie= 0;
+            var ilosc_bialko= 0;
+            var ilosc_tluszcz= 0;
+            var ilosc_weglowodany= 0;
+            var ilosc_blonnik= 0;
 
-    $form.data("validator", null);
+            //var totalQty = 0;
+            var Amount = 0;
+            var totalAmount = 0;
+            var txtExchangeRate= 1;
+          
+            var i;
 
-    $.validator.unobtrusive.parse($form);
+            for (i = 0; i < x.length; i++) {                                              
+                
+                var idofIsDeleted = i + "__IsDelete";
 
-    $form.validate($form.data("unobtrusiveValidation").options);
+                var idofIlosc = "#Ilosc_" + i + '_'  ;                
+                
+                 
+              
+                var iloscId = document.querySelector(idofIlosc).id;
 
-}
+                console.log(i)
+                                                         
+
+
+
+                
+
+                //if (document.getElementById(hidIsDelId).value != "true")
+                if(true)
+                {
+                    console.log(x[i].value);
+                    ilosc_total = ilosc_total + eval(x[i].value)
+                    
+                    //txtprice.value = txtExchangeRate * eval(txtfob.value); 
+                            
+                    //txttotal.value=eval(x[i].value) * txtprice.value;
+
+                    //totalAmount=eval(totalAmount) + eval(txttotal.value);
+                }
+            }
+            
+
+            document.getElementById('ilosc_total').value = ilosc_total;
+
+
+            document.getElementById('txtAmountTotal').value = totalAmount.toFixed(2);
+
+            return;
+        }
+
+        document.addEventListener('change', function (e) {
+            if (event.target.id.indexOf('ProductCode')>=0)
+            {
+                SetUnitName(event.target);
+            }
+
+        },false);
+
+        document.addEventListener('change', function (e) {
+            if (e.target.classList.contains('do_zmiany')) 
+            {
+                CalcTotals();
+            } 
+        }
+        , false);
 
 
         </script>
