--- a/projekt/projekt/Views/Account/Login.cshtml
+++ b/projekt/projekt/Views/Account/Login.cshtml
@@ -2,41 +2,44 @@
     ViewBag.Title = "Login";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h1>Login</h1>
-<div class="login-form">
-    <form action="Verify" method="post">
-        <div class="pole-login">
-            <label>Nazwa użytkownika:</label>
-            <input type="text" name="Nazwa" placeholder="wpisz nazwę użytkownika" required="" />
-        </div>
-        <div class="pole-login">
-            <label>hasło</label>
-            <input type="password" name="Haslo" placeholder="Wpisz hasło" required="" id="passwd" />
-        </div>
-        <div class="label">
-            <input type="checkbox" name="checkbox" value="show password" onclick="showPwd()" />
-            <label>pokaż hasło</label>
-        </div>
-        <script>
-            function showPwd(){
-                var x = document.getElementById("passwd");
-                if(x.type==="password"){
-                    x.type="text";
+<div>
+    <h1>Login</h1>
+    <div class="login-form">
+        <form action="Verify" method="post">
+            <div class="pole-login">
+                <label>Nazwa użytkownika:</label>
+                <input type="text" name="Nazwa" placeholder="wpisz nazwę użytkownika" required="" />
+            </div>
+            <div class="pole-login">
+                <label>hasło</label>
+                <input type="password" name="Haslo" placeholder="Wpisz hasło" required="" id="passwd" />
+            </div>
+            <div class="label">
+                <input type="checkbox" name="checkbox" value="show password" onclick="showPwd()" />
+                <label>pokaż hasło</label>
+            </div>
+            <script>
+                function showPwd() {
+                    var x = document.getElementById("passwd");
+                    if (x.type === "password") {
+                        x.type = "text";
+                    }
+                    else {
+                        x.type = "password";
+                    }
                 }
-                else{
-                    x.type="password";
+            </script>
+            <input type="submit" value="Zaloguj" />
+            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">
+                <input type="button" value="Zarejestruj się" />
+            </a>
+            @{
+                if (TempData["success"] != null)
+                {
+                    <p class="text-danger">@TempData["success"]</p>
                 }
             }
-        </script>
-        <input type="submit" value="Zaloguj" />
-        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">
-            <input type="button" value="Zarejestruj się" />
-        </a>
-        @{
-            if (TempData["success"] != null)
-            {
-                <p class="text-danger">@TempData["success"]</p>
-            }
-        }
-    </form>
+        </form>
+    </div>
+
 </div>
