--- a/projekt/projekt/wwwroot/css/meals.css
+++ b/projekt/projekt/wwwroot/css/meals.css
@@ -16,3 +16,67 @@
 #back{
     margin-right:5px;
 }
+.container{
+    margin:2em 1em;
+}
+.card {
+    position:relative;
+   background-color:inherit!important;
+   width:90%;
+   margin:5vh 5vw;
+}
+#NazwaDania{
+    width:90%;
+    margin:0 5vw;
+    padding:0.5em
+}
+.control-label{
+    margin:1em 5vw;
+}
+.edit-table{
+    width:90%;
+
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100vw;
+    position: relative;
+    /* width: 100%; */
+    padding-right: 15px;
+    padding-left: 15px;
+    margin:0.5em 5vw;
+}
+#btnAddDetailRow{
+    float:right;
+}
+td button{
+    float:right;
+    width:auto;
+    margin:3px 0;
+}
+.dark-mode .btn-outline-dark
+{
+    color: #fff;
+    background-color: #343a40;
+    border-color: #fff;
+    transition: 0s;
+}
+    .dark-mode .btn-outline-dark:hover {
+        color: #343a40;
+        transition: 0.15s;
+        background-color: #fff;
+    }
+.dark-mode .wlasciwosclisty input {
+    color: #b8cee4;
+}
+.wlasciwosclisty {
+    width: 8%
+}
+td,th{
+    min-width:10vw;
+}
+    td:last-child, th:last-child {
+        min-width: 5vh;
+    }
+table{
+    row-gap:1em;
+}
